--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-	"dependencies": {
-		"ts-node": "^10.9.2",
-		"typescript": "^5.6.3"
-	}
+  "dependencies": {
+    "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3"
+  }
 }
